# PX4-Fork

./: .gitignore  Makefile  compile_commands.json  flight_analyze.m
.cache/clangd/index/: ACTUATOR_CONTROL_TARGET.hpp.3FFB1F4BB15ECEBA.idx  ACTUATOR_OUTPUT_STATUS.hpp.D5F5F1A9252617EC.idx  ADSB_VEHICLE.hpp.BA2B24C01DEE1EBA.idx  ALTITUDE.hpp.75A88EC3D70B2489.idx  ATTITUDE.hpp.72BEE0101D194D69.idx  ATTITUDE_QUATERNION.hpp.20D90A083E6C1F2B.idx  ATTITUDE_TARGET.hpp.C2DAFC5415090AA3.idx  ATT_POS_MOCAP.hpp.C0A2373E20D92DAE.idx  AUTOPILOT_STATE_FOR_GIMBAL_DEVICE.hpp.6B5A350613184C58.idx  AUTOPILOT_VERSION.hpp.BE3F0ED301F9BF1A.idx  Accelerometer.cpp.49BB430A9BF4DEEE.idx  Accelerometer.hpp.D4D3C1E2DF507524.idx  ActuatorEffectiveness.cpp.7CF1BFFAC661D922.idx  ActuatorEffectiveness.hpp.DC5F3B9C9A929D2C.idx  ActuatorEffectivenessControlSurfaces.cpp.E7357EECF08F947C.idx  ActuatorEffectivenessControlSurfaces.hpp.2044BEA432E2E74F.idx  ActuatorEffectivenessCustom.cpp.C173847591DF13C2.idx  ActuatorEffectivenessCustom.hpp.4313C20FD96046D2.idx  ActuatorEffectivenessFixedWing.cpp.B9FB04F69EF72F1B.idx  ActuatorEffectivenessFixedWing.hpp.9714078226FBA94F.idx  ActuatorEffectivenessHelicopter.cpp.4B1B1944C45C2124.idx  ActuatorEffectivenessHelicopter.hpp.F971D0AEE85827E8.idx  (+1374 more)
msg/: CMakeLists.txt  commander_state.msg  vehicle_control_mode.msg  vehicle_lqr_enabled.msg  vehicle_status.msg  vehicle_status_flags.msg
msg/tools/: urtps_bridge_topics.yaml
src/lib/: CMakeLists.txt
src/modules/mc_lqr_control/LQRControl/: CMakeLists.txt  LQRControl.cpp  LQRControl.hpp  LQRControlTest.cpp
(+26 files in other folders)
